<resources>
    <string name="app_name">AcsMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">ACS mobile</string>
    <string name="menu_news">Aktualności</string>
    <string name="menu_events">Wydarzenia</string>
        <string name="submenu_reservations">Dokonane rezerwacje</string>
        <string name="submenu_kategories">Kategorie</string>
        <string name="submenu_localisation">Lokalizacje</string>
    <string name="menu_info">Info</string>
        <string name="submenu_sections">Sekcje</string>
        <string name="submenu_leaders">Kierownictwo</string>
        <string name="submenu_team">Kadra</string>
        <string name="submenu_postgraduate">Studia podyplomowe</string>
        <string name="submenu_exams">Egzaminy i zaliczenia WF</string>
        <string name="submenu_athletes">Sportowcy z AMW</string>
        <string name="submenu_clubs">Kluby przy ACS AMW Gdynia</string>
        <string name="submenu_terms">Regulamin ACS</string>
    <string name="menu_pools">Baseny</string>
        <string name="submenu_schedules">Grafik basenu</string>
        <string name="submenu_prices">Cennik OSzP</string>
        <string name="submenu_for_team">OSzP dla kadry AMW</string>
        <string name="submenu_for_courses">OSzP dla kursów</string>
    <string name="menu_objects">Hale</string>
        <string name="submenu_schedules_objects">Grafiki obiektów</string>
        <string name="submenu_prices_objects">Cennik OWFiS</string>
        <string name="submenu_for_team_objects">OWFiS dla kadry AMW</string>
        <string name="submenu_for_courses_objects">OWFiS for courses</string>
    <string name="menu_notifications">Komunikaty</string>
    <string name="menu_contact">Kontakt</string>
        <string name="submenu_phones">Wykaz telefonów</string>
        <string name="submenu_help">POMOC</string>
    <string name="menu_classes">Zajęcia Sportowe</string>
        <string name="submenu_zs_news">Komunikaty ZS+</string>
        <string name="submenu_zs_terms">Regulamin ZS</string>
        <string name="submenu_zs_forms">Formalności ZS</string>
    <string name="section_futsal_button">Zobacz aktualności z kategorii futsal</string>
    <string name="section_leader_futsal">Kierownik sekcji: mgr Robert Wereszko</string>
    <string name="section_futsal_photo_description">Reprezentacja futsalu AMW Gdynia z 2020</string>
    <string name="section_futsal_content_paragraph_one">Reprezentacja AMW w futsalu podczas Półfinałów Akademickich Mistrzostw Polski w Futsalu rozgrywanych w Toruniu w dniach <b> 23–26 stycznia 2020 r. </b> zyskała markę najbardziej atletycznej drużyny turnieju i była bliska sprawienia największej niespodzianki już w pierwszym meczu.</string>
    <string name="section_futsal_content_paragraph_two">W sumie reprezentacja AMW potwierdziła osiągnięty poziom futsalowy potwierdzając zajęte <b> III miejsce </b> w Pomorskiej Lidze Akademickiej wywalczonym III miejscem w grupie makroregionalnych półfinałów, walcząc o miejsca 9–12 ostatecznie zajęła 10 miejsce i zdobyła 30 pkt. klasyfikacji AMP (I miejsce w kategorii USP /Uczelni Społeczno Przyrodniczych/ w niewątpliwie najsilniejszym makroregionie).</string>
    <string name="section_futsal_content_paragraph_three">Jednocześnie AMW awansowała ok. 20 miejsc w futsalowym rankingu krajowych rozgrywek akademickich, walczyła jak równy z równym z ubiegłorocznym mistrzem i tegorocznym finalistą AMP. Oprócz doświadczenia, które zaprocentuje w kolejnych rozgrywkach zdobyła też uznanie rywali oraz sympatię kibiców i organizatorów, podobnie jak zorganizowana grupa kibiców AMW – studentek WNHiS, uroczo dopingująca we wszystkich meczach naszą drużynę z transparentem „Trzy litery, jedno serce – AMW!”. W pierwszym starciu z akademickimi mistrzami Polski z ubiegłego roku – zespołem Wyższej Szkoły Gospodarki z Bydgoszczy – to AMW, ku zdumieniu i zaskoczeniu mistrzów, organizatorów i kibiców, to AMW prowadziła grę i dominowała na boisku. Wynik bezbramkowy utrzymywał się do 6 min., w której Adam Finfando po zespołowej akcji umieścił piłkę w bramce WSG. Po trzech minutach przeciwnicy doprowadzili do wyrównania, ale AMW szybko ostudziła głowy mistrzów ponownie obejmując prowadzenie 2:1 po strzale kapitana drużyny, inżyniera Adama Woźniaka. W pierwszych sekundach po przerwie Szymon Szultek podwyższył wynik na 3:1. W kolejnej minucie przeciwnicy zdołali zdobyć bramkę kontaktową, ale to nadal AMW kontrolowała grę by w 6 min. drugiej połowy podwyższyć na 4:2 po bramce Mateusza Opielewicza. Taki efekt był możliwy nie tylko dzięki skutecznej grze w ataku ale przede wszystkim dzięki uważnej grze obronnej i wspaniałej postawie w marynarskiej bramce Kacpra Malinowskiego. Jednak na 6 min przed końcem meczu, po osłabieniu obrony AMW, WSG zdobyła bramkę kontaktową na 4:3 by na 2 min. przed końcem meczu doprowadzić do remisu 4:4. W końcowej fazie starcia z akademickim mistrzem Polski zabrakło doświadczenia z boisk futsalowych i drużyna WSG złożona z profesjonalnych futsalowców zdołała przechylić w ostatniej minucie szalę zwycięstwa na swoją stronę z wynikiem końcowym 4:6. W kolejnym meczu grupowym AMW potwierdziła klasę zdecydowanie wygrywając 3:1 (do przerwy 1:1) z drużyną Uniwersytetu Przyrodniczego z Poznania. Na listę strzelców wpisali się ponownie Szymon Szultek, Mateusz Opielewicz i Adam Woźniak. W trzecim meczu grupowym, decydującym o awansie do fazy finałowej, AMW ponownie narzuciła swój styl gry zdecydowanie wyżej klasyfikowanemu rywalowi – drużynie Uniwersytetu Szczecińskiego, by w czwartej minucie objąć prowadzenie po bramce Dominika Pyrackiego, nieustannie bombardującego przeciwników silnymi strzałami spoza pola karnego. Wynik 1:0 utrzymywał się do przerwy oraz przez pierwsze 9 min. drugiej połowy. Szczecinianie zdołali wyrównać na 1:1 dopiero po uzyskaniu przedłużonego rzutu karnego dzięki skrzętnemu symulowaniu i kumulacji fauli. W tej sytuacji każdy kolejny faul Marynarzy oznaczał rzut karny dla drużyny przeciwnej. Dzięki takiemu handicapowi i wyrównującej bramce Szczecinianie złapali wiatr w żagle i to oni podwyższyli w kolejnej minucie na 1:2 by ustalić wynik spotkania 1:3 na dwie minuty przed zakończeniem spotkania. Nie pomogły ściągnięte z Gdyni na ten mecz, po osłabieniach urazowych z pierwszego dnia, posiłki w osobach świeżo upieczonego inżyniera Huberta Turka i Macieja Kaszorka ani też wspaniała dyspozycja bramkarza Kacpra Malinowskiego walczącego podczas turnieju z przeciwnikami.. i chorobą. Marynarze musieli uznać wyższość lidera środowiska szczecińskiego złożonego z zawodników III i IV ligi oraz profesjonalnych futsalowców, bazującą na doświadczeniu i boiskowym sprycie.</string>
    <string name="section_futsal_hyperlink_one">Z racji niespodzianki w pierwszym meczu organizatorzy zdecydowali się transmitować ten mecz AMW w lokalnej TV. Relację telewizyjną z całego meczu trwającą ponad godzinę (mecze rozgrywane 2×15 min. aktywnego czasu gry) można obejrzeć pod linkiem: <a href="https://www.facebook.com/AMPFutsalTorun/videos/795857814229386/">Relacja telewizyjna</a></string>
    <string name="section_futsal_content_paragraph_four">W rywalizacji o miejsca 9–12 AMW, po kolejnym niezwykle emocjonującym meczu, AMW pokonała 5:4 Uniwersytet Medyczny z Poznania po serii rzutów karnych. Tym razem ekipa Medyków, która przybyła na turniej z masażystą i dotychczas dała poznać się z bardzo ostrej, wręcz brutalnej gry musiała zmierzyć się z meczu z Marynarzami, po którym z pewnością potrzebowała rozszerzonej pomocy medycznej. Mimo wyrównanej gry, to Medycy pierwsi objęli prowadzenie i do przerwy prowadzili nawet 0:2. Po przerwie Marynarze przystąpili do odrabiania strat. Dwa razy na listę strzelców wpisali się Bartosz Wilmowicz przy 1:2 i Mateusz Opielewicz 2:3 a wyrównującą bramkę „stadiony świata” strzelił Mateusz Opielewicz – odpalonej rakiecie z 15 metrów, strzałem pod poprzeczkę bramki Medyków (50 min. 32 sek. w relacji video). W rzutach karnych dwukrotną obroną popisał się Kacper Malinowski a bramki dla AMW ponownie strzelili Bartosz Wilmowicz i Mateusz Opielewicz.</string>
    <string name="section_futsal_hyperlink_two"> Relację video z całego meczu można obejrzeć tu: <a href="https://www.facebook.com/AMPFutsalTorun/videos/261548274813066/">Relacja video z meczu</a></string>
    <string name="section_futsal_content_paragraph_five">W ostatnim meczu turnieju AMW uległa PUSS Piła 2:5 (wynik do przerwy 0:1) a najlepszym zawodnikiem i najskuteczniejszym napastnikiem drużyny AMW w tym meczu okazał się bramkarz Kacper Malinowski, który przy wyniku 0:2 w 3 min. drugiej połowy wpisał się na listę strzelców próbując poderwać do walki zespół. Drugą bramkę dla AMW strzelił Mateusz Opielewicz.</string>
    <string name="section_futsal_hyperlink_three">Więcej pod <a href="https://www.ampy.pl/files/docs1920/wyniki/1920_futsal_m_a_wyniki.pdf?fbclid=IwAR3UO7qGpf4xX6FKQdaOmPd8wXQ5JguNGlTRAfnEVV-jOu3Pos7Ec2G7vZw">Linkiem z wynikami</a> </string>
    <string name="section_leader_athletics">Kierownik sekcji: kmdr ppor. dr Maciej Bzdawski</string>
    <string name="section_trainer_athletics">Trener: mgr Agata Brygoła</string>
    <string name="section_weightlifting_leader">Kierownik sekcji: mgr Jerzy GOŁĄBEK</string>
    <string name="section_weightlifting_button">Zobacz aktualności z kategorii podnoszenie ciężarów</string>
    <string name="section_weightlifting_content">Czołowi zwodnicy : \n - Iga Siemionow, \n - Kinga Przybysz, \n - Piotr Budych, \n - Wojciech Kolecki, \n - Dawid Jutrzenka-Trzebiatowski \n</string>
    <string name="section_basket_content_one">II-ligowy drużyna koszykówki w ramach, której występują słuchacze AMW. Drużyna w rozrywkach 2020 zdobyła mistrzostwo Polski.</string>
    <string name="section_basket_photo_caption1">skład Asseco AMW II Gdynia 2019/2020</string>
    <string name="section_basket_hyperlink">więcej na: <a href="https://rozgrywki.pzkosz.pl/liga/4/druzyny/d/2997/arka-amw-ii-gdynia-/mecz_po_meczu.html#top">stronie.</a></string>
    <string name="section_basket_content_2">Drużyna Asseco Arka AMW II występująca na co dzień w rozgrywkach II ligi koszykarskiej została w Katowicach Mistrzem Polski w kategorii U20. O sile zespołu stanowią studenci Akademii Marynarki Wojennej, a MVP turnieju finałowego został Grzegorz Kamiński student I roku WDiOM.</string>
    <string name="section_basket_content">W meczu decydującym o mistrzostwie Polski nasi koszykarze pokonali Trefla Sopot 76:65. Trzecie miejsce dla AZS AWF Mickiewicz-Romus Katowice.</string>
    <string name="section_athletics_button">Zobacz aktualności z kategorii Lekkkoatletyka</string>
    <string name="info_postgraduate_title">Zarządzanie organizacjami sportowymi w placówkach oświatowych i poza oświatowych</string>
    <string name="info_postgraduate_content">Wydział Nauk Humanistycznych i Społecznych Akademii Marynarki Wojennej w Gdyni oraz Partnerzy serdecznie zapraszają do udziału w nowych studiach podyplomowych. Głównym celem studiów na kierunku Zarządzanie organizacjami sportowymi w placówkach oświatowych i poza oświatowych jest przygotowanie słuchaczy do zarządzania organizacjami sportowymi między innymi: Ośrodkami Sportu i Rekreacji, klubami sportowymi, klubami fitness, Orlikami, placówkami opiekuńczo-wychowawczymi, szkołami, uczniowskimi klubami sportowymi w szkołach podstawowych i ponadpodstawowych.</string>
    <string name="info_postgraduate_hyperlink">Prosimy śledzić ofertę studiów podyplomowych na:\n\n <a href="https://wnhis.amw.gdynia.pl/pl/"> <b>Wydział Nauk Humanistycznych i Społecznych AMW Gdynia</b></a></string>
</resources>