<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.info.Sections.SectionBobsleysFragment">

    <data>

        <variable
            name="photoUrl"
            type="String" />
        <variable
            name="videoUrl"
            type="String" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_spacer1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/futsalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/section_futsal_button"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section_leader_futsal" />

                <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    bind:videoId="dI-Lh4s6vLw" />

                <ImageView
                    android:id="@+id/futsalImageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/section_futsal_photo_description"
                    android:scaleType="matrix"
                    bind:image="@{photoUrl}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/section_futsal_content_paragraph_one" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/section_futsal_content_paragraph_two" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="marquee"
                    android:lines="61"
                    android:text="@string/section_futsal_content_paragraph_three" />

                <TextView
                    android:id="@+id/futsalHyperlink1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lines="6"
                    android:text="@string/section_futsal_hyperlink_one" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="marquee"
                    android:lines="17"
                    android:text="@string/section_futsal_content_paragraph_four" />
                <TextView
                    android:id="@+id/futsalHyperlink2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/section_futsal_hyperlink_two" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="marquee"
                    android:lines="7"
                    android:text="@string/section_futsal_content_paragraph_five" />
                <TextView
                    android:id="@+id/futsalHyperlink3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/section_futsal_hyperlink_three" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</layout>