<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.info.Sections.SectionWeightliftingFragment">

    <data>
        <variable
            name="photoUrl"
            type="String" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1"
        android:orientation="vertical">

        <Button
            android:id="@+id/weightliftingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/section_weightlifting_button"
            android:textSize="12sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/section_weightlifting_leader" />

        <ImageView
            android:id="@+id/volleyballImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/section_futsal_photo_description"
            android:scaleType="matrix"
            bind:image="@{photoUrl}" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_weightlifting_content"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>