<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.info.Sections.basketsubfragments.ArkaAmwIIFragment">

    <data>
        <variable
            name="photoUrl"
            type="String" />
        <variable
            name="photoUrl2"
            type="String" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_spacer1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/grid_spacer1"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/section_basket_content_one" />

                <ImageView
                    android:id="@+id/volleyballImageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/section_basket_photo_caption1"
                    android:scaleType="matrix"
                    bind:image="@{photoUrl}" />

                <TextView
                    android:id="@+id/basketHyperlink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/section_basket_hyperlink" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/section_basket_content_2" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/section_basket_photo_caption1"
                    android:scaleType="matrix"
                    bind:image="@{photoUrl2}" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/section_basket_content" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</layout>